# safe-proxy-site

./: .env.example  .replit  Dockerfile  README.md  package.json  server.js
cpp/: CMakeLists.txt  README.md
cpp/include/core/: export.hpp  feature_manager.hpp  hook_manager.hpp  logger.hpp  memory.hpp  project.hpp  render_loop.hpp
cpp/include/features/: example_feature.hpp  feature.hpp
cpp/include/sdk/: entity.hpp  offsets.hpp
cpp/src/: dllmain.cpp
cpp/src/core/: feature_manager.cpp  hook_manager.cpp  logger.cpp  project.cpp  render_loop.cpp
cpp/src/features/: example_feature.cpp
cpp/src/sdk/: entity.cpp
cpp/tools/: runner.cpp
public/: index.html
